# data-cleaning-env

./: .env  .env.example  .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate-submission.sh
api/: app.py
env/: dataset.py  environment.py  models.py
env/Scripts/: activate  activate.bat
graders/: __init__.py  easy.py  grader.py  hard.py  medium.py
server/: app.py
tasks/: __init__.py  easy.py  hard.py  medium.py
