[project]
name = "data-cleaning-env"
version = "0.1.0"
description = "Data Cleaning Environment API"
requires-python = ">=3.10"

dependencies = [
"numpy",
"fastapi",
"uvicorn",
"pydantic",
"openai",
"requests",
"python-dotenv",
"word2number",
"openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
